--- a/Instock-fe/src/components/InventoryList/InventoryList.scss
+++ b/Instock-fe/src/components/InventoryList/InventoryList.scss
@@ -16,28 +16,7 @@
     margin: 0 4% 6.25rem 4%; 
     top: 5.9375rem; 
   }
-  @include large {
 
-  }
-  &__main {
-    padding: 0.9375rem 0; 
-    border-bottom: 0.0625rem solid $secondaryLight; 
-    @include medium {
-      display: flex;
-      justify-content: space-between;
-    }
-    &:hover {
-      background-color: rgba(46, 102, 230, 0.07);
-    }
-  }
-  &__header {
-    @include medium {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      padding: 0.9375rem 4%; 
-    }
-  }
   &__title {
     color: $primaryDark;
     font-weight: 600;
@@ -46,16 +25,7 @@
       margin: 0.625rem 0 0 0; 
     }
   }
-  &__form-container {
-    width: stretch;
-    @include medium {
-      padding-top: 0.375rem; 
-      width: 53%;
-    }
-    @include large {
-      width: 44%;
-    }
-  }
+  
   &__form {
     display: flex;
     flex-direction: column;
@@ -67,15 +37,37 @@
       padding: 0.9375rem 4%; 
       margin: 0;
     }
+    @include large {
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 2rem 4%; 
+      margin: 0;
+    }
+    &-container {
+      @include medium {
+        padding-top: 0.375rem; 
+        width: 53%;
+      }
+      @include large {
+        width: 44%;
+      }
+  }
   }
   &__form-sub {
     padding-bottom: 0.3125rem; 
+
     @include medium {
       display: flex;
       height: 2.375rem; 
       margin-top: 0.625rem; 
     }
+    @include large {
+      display: flex;
+      height: 3.5rem; 
+      margin-top: 0.625rem; 
+    }
   }
+
   &__search {
     background-image: url("../../assets/icons/search-24px.svg");
     background-repeat: no-repeat;
@@ -94,7 +86,13 @@
     @include medium {
       margin: 0 0.9375rem 0 0; 
     }
+    @include large {
+      margin: 0 0.9375rem 0 0; 
+      width: 20rem;
+      height: 2.44rem;
+    }
   }
+
   &__button {
     background-color: $primaryMedium;
     color: $primaryLight;
@@ -108,21 +106,31 @@
       height: 2.375rem; 
       width: 8.125rem; 
     }
+    @include large {
+      width: 8.125rem; 
+      height: 2.44rem; 
+    }
 
     &:hover {
       background-color: $primaryDark;
     }
   }
+
   &__list-divider {
     border-bottom: 0.0625rem solid $secondaryLight; 
     @include medium {
       display: none;
     }
+    @include large {
+      display: none;
+    }
   }
+
   &__category-box {
     background-color: $backgroundLight;
     width: 100%;
   }
+
   &__categories {
     display: flex;
     justify-content: space-between;
@@ -146,40 +154,16 @@
       display: flex;
       align-items: center;
     }
-  }
-  &__parent-section {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    height: 10.625rem; 
-    padding: 0 6.5% 0.3125rem 6.5%; 
-    @include medium {
-      flex-direction: row;
-      align-items: center;
-      height: auto;
-      width: 100%;
-      padding: 0 4%;
-      justify-content: space-between;
+    @include large {
+      font-weight: 600;
+      color: $secondraryDark;
+      margin: 0.5rem 0; 
+      display: flex;
+      align-items: left;
+      padding-left: 3.4rem;
     }
   }
-  &__text {
-    color: $secondraryDark;
-    @include medium {
-      width: 5.625rem; 
-    }
-  }
-  &__item-container {
-    display: flex;
-    flex-direction: column;
-  }
-  &__item-heading {
-    line-height: 1rem; 
-    margin: 0 0 0.3125rem 0; 
-    font-weight: 600;
-    @include medium {
-      display: none;
-    }
-  }
+
   &__item {
     display: flex;
     height: 1.25rem; 
@@ -190,6 +174,10 @@
     @include medium {
       width: 9.6875rem; 
     }
+    &:hover, &-row:hover {
+      background-color: $backgroundLight;
+      border-bottom: 0.05rem solid $secondaryLight;
+  }
     &-row {
         display: flex;
         justify-content: space-between;
@@ -197,7 +185,24 @@
       }
     &-detail{
     flex: 1;
-    text-align: center;
+    text-align: left;
+    padding-left: 3rem;
+    &-quantity {
+      margin-left: 
+      2rem;
+    }
+    a {
+      text-decoration: none; 
+      font-weight: 600;
+      color: $primaryMedium; 
+  }
+  img {
+    bottom: -0.4rem;
+    position: relative;
+  }
+  @include medium {
+    font-size: 0.9rem;
+  }
   }
   }
   &__actions-detail{
@@ -207,128 +212,38 @@
     justify-content: center;
     gap: 0.625rem; 
   }
-  &__category-heading {
-    height: 1rem; 
-    line-height: 1rem; 
-    margin: 1rem 0 0.3125rem 0; 
-    font-weight: 600;
-    @include medium {
-      display: none;
-    }
-  }
-  &__category {
-    line-height: 1.25rem; 
-    margin: 0 0 2.5rem 0; 
-    @include medium {
-      margin: 0;
-      width: 6.875rem; 
-      padding-left: 0.1875rem; 
-    }
-  }
-  &__category-inventory {
-    @include medium {
-      padding-right: 2.625rem; 
-    }
-  }
-  &__category-status {
-    @include medium {
-      padding-left: 2.1875rem; 
-    }
-  }
-  &__category-quantity {
-    @include medium {
-      padding-left: 3.4375rem; 
-      width: 3.125rem; 
-    }
-  }
-  &__category-warehouse {
-    @include medium {
-      padding-right: 2.1875rem; 
-    }
-  }
-  &__status-heading {
-    line-height: 1rem; 
-    margin: 1rem 0 0.3125rem 0; 
-    @include medium {
-      display: none;
-    }
-  }
-  &__status-container {
-    @include medium {
-      width: 7.5rem; 
-    }
-  }
-  &__status {
-    line-height: 1rem; 
-    text-transform: uppercase;
-    font-size: 0.67rem; 
+
+  &__item-detail-status {
+    line-height: 0.3rem; 
+    text-transform: uppercase; 
     margin: 0;
+    font-weight: 600;
+    font-size: 0.8rem;
+    text-align: center;
+
+    &--in-stock {
     color: $inStock;
     background: rgba(21, 132, 99, 0.07);
-    padding: 0.1875rem 0.25rem; 
+    padding: 0.8rem 0; 
     border-radius: 1.25rem; 
+    max-width: 6rem;
+    margin: 0 3.7rem 0 0;
+    }
+
+    &--out-of-stock {
+      background: rgba(255, 0, 0, 0.07); 
+      color: $outOfStock;
+      padding: 0.9rem 0; 
+      border-radius: 1.25rem; 
+      max-width: 7rem;
+      margin: 0 3.1rem 0 0;
+    }
+    
     @include medium {
       width: 60%;
     }
   }
-  &__quantity-heading {
-    line-height: 1rem; 
-    margin: 1rem 0 0.3125rem 0; 
-    @include medium {
-      display: none;
-    }
-  }
-  &__quantity {
-    margin: 0;
-    @include medium {
-      width: 3.125rem; 
-      padding-right: 0.3125rem; 
-    }
-  }
-  &__warehouse-heading {
-    margin: 1rem 0 0.3125rem 0; 
-    font-weight: 600;
-    @include medium {
-      display: none;
-    }
-  }
-  &__warehouse {
-    margin: 0;
-    @include medium {
-      padding-right: 0.9375rem; 
-    }
-  }
-  &__action-section-hide {
-    display: none;
-    @include medium {
-      display: inline-block;
-    }
-  }
-  &__action-section-hide-medium {
-    @include medium {
-      display: none;
-    }
-  }
-  &__action-logo-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 6.5%;
-    padding-bottom: 0.125rem; 
-    @include medium {
-      margin: 0;
-      padding: 0;
-    }
-  }
-  &__action-heading {
-    display: none;
-    @include medium {
-      display: none;
-    }
-  }
-  &__delete-icon {
-    background: none;
-    padding-right: 0.3125rem; 
-  }
+
 }
 
 button {
